@@ -1,0 +1,31 @@
+/* Searching in a string.
+   Copyright (C) 2003 Free Software Foundation, Inc.
+
+   This program is free software; you can redistribute it and/or modify
+   it under the terms of the GNU General Public License as published by
+   the Free Software Foundation; either version 2, or (at your option)
+   any later version.
+
+   This program is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU General Public License for more details.
+
+   You should have received a copy of the GNU General Public License
+   along with this program; if not, write to the Free Software Foundation,
+   Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.  */
+
+/* Specification.  */
+#include "strchrnul.h"
+
+/* Find the first occurrence of C in S or the final NUL byte.  */
+char *
+strchrnul (s, c_in)
+     const char *s;
+     int c_in;
+{
+  while (*s && (*s != c_in))
+    s++;
+
+  return (char*) s;
+}
